deploy/modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block                       = var.vpcCIDR
}
